-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.10.0 RC
-
None
-
2b10e11a95963d444e8f329eca6c29eeb38573d0, 1b166c87d (dev), 6e3c25f94 (6.6), 974430777 (tqtc/lts-6.5)
As long as the gesturePolicy is not DragThreshold, you can drag your finger or mouse around within the bounds of the parent Item and a long press will still be detected. If the gesturePolicy is ReleaseWithinBounds, you can even drag outside and still get a longPress. Maybe in a strict sense it's correct, but not sure if it makes sense in the real world: usually the idea is to stay in one place to trigger a long press.
- relates to
-
QTBUG-119132 it should be possible to disable the TapHandler.longPressed signal
-
- Closed
-
For Gerrit Dashboard: QTBUG-65012 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
234848,2 | TapHandler: enforce drag threshold for timeHeld and longPressed | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
518324,6 | Make TapHandler longPressed/tapped exclusive and reliable; fix example | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
519523,4 | Make TapHandler longPressed/tapped exclusive and reliable; fix example | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
519576,3 | Make TapHandler longPressed/tapped exclusive and reliable; fix example | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |